fixed contrast and background

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: white
+  background-color: white ;
   margin: 0;
   padding: 0;
 }
